main.css
:root {
  --color-white: #fff;
  --time-animation: 0.6s;
 
}

@keyframes pulse {
  0% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(25px);
  }
  100% {
    transform: translateY(0px);
  }
}


html {

  font-family: 'Quicksand', sans-serif;
  user-select: none;

}


a {
  text-decoration: none;
}

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  overflow: hidden scroll;
  -ms-overflow-style: none;
  cursor: url(https://cur.cursors-4u.net/cursors/cur-1/cur79.cur), auto;
  font-family: 'Gruppo', cursive;
}

body::-webkit-scrollbar {
  display: none;
}

.layout {
  width: 100%;
  height: calc(100vh * 3);
  position: relative;
}

.layout .section-stick {
  margin: auto;
  position: fixed;
  right: 50px;
  bottom: 50px;
  display: flex;
  flex-direction: column;
  row-gap: 30px;
  align-items: center;
  justify-content: flex-start;
  z-index: 1000;
}

.layout .section-stick .stick,
.layout .section-stick .active {
  width: 13px;
  height: 62px;
  border: none;
  border-radius: 9px;
}

.layout .section-stick .stick {
  position: relative;
  background-color: rgba(102, 91, 91, 0.473);
  transition: all var(--time-animation) ease-in-out;
}

.layout .section-stick .active {
  position: absolute;
  background-color: aaargba(238, 197, 197, 0.719);
  box-shadow: 0px 0px 12px 1px var(--color-white);


}

.layout section {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  color: var(--color-white);
  font-size: 40px;
  font-weight: 600;
  transform: translateY(100vh);
  transition: all var(--time-animation) ease-in-out;
  z-index: 0;
}

.layout section .home {
  display: flex;
  flex-direction: column;
  row-gap: 45px;
  align-items: center;
  font-size: 28px;
  justify-content: center;
  margin-right: 100px;
  padding-left: 50px;
}

.link {
  color: white;
  text-decoration: none;
}

link:visited {
  color: white;
}

.layout section .home svg {
  animation: pulse 1.4s linear infinite normal;
}

.layout .s1 {
  background: linear-gradient(#04151F, #183A37);
  transform: translateY(0);
  z-index: 4;
  border-bottom: none;
  max-height: 100vh;
  border-bottom: 2px solid #183A37;
}

.layout .s2 {
  background:linear-gradient(#183A37, #A2666F);
  z-index: 3;
  max-height: 100vh;
  max-width: 100%;
  border-bottom: 2px solid #A2666F;
}

.layout .s3 {
  background: linear-gradient(#A2666F,#183A37) ;
  z-index: 2;
  width: 100%;
  display: flex;
  flex-direction: column;
  border-bottom: 2px solid #183A37;  
}

.s3 h3 {
  color: black;
  text-shadow: 5px 5px 10px #c3c7c3;
  font-size: 39px;
  
}

.layout .s4 {
  background: linear-gradient(#183A37,#A2666F);
  z-index: 2;
  max-height: 100vh;
 
  border-bottom: 2px solid #A2666F;
}

.layout .s5 {
  background: linear-gradient(#A2666F,#183A37);
  z-index: 2;
  max-height: 100vh;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap-reverse;
  border-bottom: 2px solid #183A37;

}


.layout .s6 {
  background: linear-gradient(#183A37,#A2666F);
  max-height: 100vh;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;


}

.passionsTitle {
  color: black;
  text-shadow: 5px 5px 10px #c3c7c3;
  font-size: 39px;
}

.passions {
width: 50%;
max-height:100%;

}

.about {
    width: 60%;
    height: 200px;
    font-size: 19px;
    margin-top: 200px;
    display: flex;

    flex-wrap: wrap;
   align-content: center;
    flex-direction: column;
    justify-content: space-evenly;
    text-align: center;
   
    font-family: "Josefin Sans", sans-serif;
    border-radius: 90px;
    margin-left: 150px;
    margin-bottom: 220px;
    filter: drop-shadow(rgba(224, 171, 171, 0.57) 0px 0px 0.75rem);
    font-weight: 500;
    letter-spacing: 5px;
    transition: all 0.5s ease 0s;
}


#aboutMiddleTitle2 {
  margin-top: 100px;
}

.gallery-wrap {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 70vh;
  opacity: 0.8;
  flex-wrap: wrap;
}

.item {
  flex: 1;
  height: 100%;
  width: 300px;
  background-position: center;
  background-size: cover;
  background-repeat: none;
  transition: flex 0.8s ease;
  filter: grayscale(100%);

  box-shadow: rgba(168, 168, 175, 0.726) 0px 0px 16px;
}


.item:hover {
  flex: 7;
  filter: grayscale(0%);
  box-shadow: #183a37bd -5px 5px, #214e4ad0 -10px 10px, rgba(19, 168, 168, 0.301) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(46, 240, 230, 0.05) -25px 25px;
}

.item-1 {
  background-image: url("./Capture\ d’écran\ \(118\).png");
}

.item-2 {
  background-image: url("./Capture\ d’écran\ \(96\).png");
}

.item-3 {
  background-image: url("./Capture\ d’écran\ \(117\).png");
}

.item-4 {
  background-image: url("./Capture\ d’écran\ \(44\).png");
}

.item-5 {
  background-image: url("./Capture\ d’écran\ \(55\).png");
}

.item::after {
  content: attr(data-text);
  position: absolute;
  top: 50%; 
  transform: translate(-50%, -50%);
  background: rgba(0, 0, 0, 0.589); 
  color: white; 
  padding: 10px; 
  border-radius: 5px;
  opacity: 0; 
  transition: opacity 0.3s;
  font-size: 15px;
}

.item:hover::after {
  opacity: 1;
}
#logo {
  transform: translatey(0px);
  box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);;
  animation: float 6s ease-in-out infinite;
  box-sizing: border-box;
  width: 100px;
  height: 60px;
  background-color: transparent;
  background: transparent;
}


.button {
  border-radius: 2px;
}

.button a {
  padding: 8px 12px;
  border: 1px solid white;
  border-radius: 2px;
  font-size: 14px;
  color: #ffffff; 
  text-decoration: none;
  font-weight: bold;
  display: inline-block;  
}

.bi-github {
  color: white;
}

@keyframes float {
  0% {
    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
    transform: translatey(0px);
  }
  50% {
    box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
    transform: translatey(-20px);
  }
  100% {
    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
    transform: translatey(0px);
  }
}
/* ... */

